--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
    padding: 40px;
    height: 500px;
    gap: 30px;
+  
 
 }
 #container{
@@ -34,14 +35,19 @@ body{
    display: flex;
    justify-content: center;
    flex-direction: row;
-   flex-wrap:wrap
+   flex-wrap:wrap;
+   box-shadow: 5px 5px 5px 5px  rgb(46, 14, 2) ;
 
 }
 
 .settings{
+    margin-top: 30px;
+    margin-right: 30px;
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
+
 
 .slider{
     display: flex;
@@ -58,7 +64,7 @@ body{
 }
 
 
-#slider-text{
+.text{
     font-size: 25px;
     font-weight: 800;
     font-family: cursive;
@@ -76,12 +82,44 @@ body{
 #rangeInput :hover
 {
     opacity: 4;
+    
 }
 #rangeOutputContainer{
     border-style: solid;
     background-color: white;
     padding: 8px;
     border-radius: 5px;
+}
+
+button{
+     border-radius: 10px;
+     width: 100px;
+     height: 50px;
+
+}
+button:hover{
+    box-shadow: 2px 2px 2px 2px  rgb(46, 14, 2) ;
+
+}
+
+.colorChoice{
+    display: flex;
+    flex-direction:column;
+    gap: 10px;
+    margin-top: 30px;
+
+}
+.colors{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+.edit-section{
+    display: flex;
+    flex-direction:column;
+    gap: 10px;
+    margin-top: 30px;
+
 }
 .footer{
     background-color: rgb(165, 160, 160);
